--- a/01_extract_data.ipynb
+++ b/01_extract_data.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"data/dispecs-2019-06-03/\"\n",
+    "data_dir = \"data/dispecs-2019-06-17/\"\n",
     "results_dir = \"results/\""
    ]
   },
@@ -137,6 +137,8 @@
     "    \"volume_issues_element\": [],\n",
     "    \"volume_none\": [],\n",
     "    \"issue_none\": [],\n",
+    "    \"journal_title_element\": [],\n",
+    "    \"journal_title_none\": [],\n",
     "    \"author_element\": [],\n",
     "    \"author_none\": [],\n",
     "    \"author_whitespace\": [],\n",
@@ -185,6 +187,16 @@
     "        volume = \"missing\"\n",
     "        issue = \"missing\"\n",
     "        file_errors[\"volume_issues_element\"].append(filename)\n",
+    "        \n",
+    "    #journal title\n",
+    "    try:\n",
+    "        journal_title = et.xpath(\"//tei:sourceDesc/tei:bibl/tei:title \", namespaces=namespaces)[0].text.replace(\"\\n\", \" \").strip()\n",
+    "        journal_title = re.sub(\" +\", \" \", journal_title)\n",
+    "        if journal_title is None:\n",
+    "            file_errors[\"journal_title_none\"].append(filename)\n",
+    "    except IndexError:\n",
+    "        journal_title = \"missing\"\n",
+    "        file_errors[\"journal_title_element\"].append(filename)\n",
     "    \n",
     "    # author\n",
     "    try:\n",
@@ -252,7 +264,6 @@
     "    }\n",
     "    \n",
     "    # text\n",
-    "    \n",
     "    index = pd.MultiIndex.from_product([def_nde.keys(), def_ndf.keys()],  names=[\"nde\", \"ndf\"])\n",
     "    temp_text_df = pd.DataFrame(index=index, columns=[\"text\", \"places\", \"persons\"])\n",
     "    temp_text_df[\"text\"] = \"\"\n",
@@ -263,6 +274,7 @@
     "    temp_text_df[\"title\"] = title\n",
     "    temp_text_df[\"volume\"] = volume\n",
     "    temp_text_df[\"issue\"] = issue\n",
+    "    temp_text_df[\"journal_title\"] = journal_title\n",
     "    temp_text_df[\"author\"] = author\n",
     "    temp_text_df[\"country\"] = country\n",
     "    temp_text_df[\"language\"] = language\n",
@@ -357,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "texts_df"
+    "texts_df.loc[0, \"journal_title\"]"
    ]
   },
   {
