--- a/02_3_journal_to_journal.ipynb
+++ b/02_3_journal_to_journal.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El CatÃ³n Compostelano'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reduced_works_df.columns = [x.encode('utf-8').decode('latin-1') for x in reduced_works_df.columns]\n",
+    "reduced_works_df.index = [x.encode('utf-8').decode('latin-1') for x in reduced_works_df.index]\n",
+    "reduced_works_df.columns[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,12 +624,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pygraphviz import *\n",
-    "A.draw('journal2journal.svg',prog='fdp')"
+    "A.draw('journal2journal.eps',prog='fdp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_gexf(G, \"test.gexf\")"
    ]
   }
  ],
