added extraction of normalized annotations

--- a/01_extract_data.ipynb
+++ b/01_extract_data.ipynb
@@ -13,15 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import glob\n",
     "import pandas as pd\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
-    "from lxml import etree, objectify\n",
-    "from html import unescape"
+    "from tqdm.auto import tqdm\n",
+    "from lxml import etree"
    ]
   },
   {
@@ -37,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"data/dispecs-2019-06-17/\"\n",
+    "data_dir = \"data/dispecs-2019-10-11/\"\n",
     "results_dir = \"results/\""
    ]
   },
@@ -158,8 +155,7 @@
     "# parse xml files\n",
     "for fn in tqdm(xml_filenames):\n",
     "    filename = fn.split(\"/\")[-1]\n",
-    "    #print(filename)\n",
-    "    #if fn != \"data/dispecs-2019-06-03/mws.3424.xml\":continue\n",
+    "    #if fn != \"data/dispecs-2019-10-11/mws.2736.xml\":continue\n",
     "    \n",
     "    et = etree.parse(fn, parser)\n",
     "    \n",
@@ -268,9 +264,9 @@
     "    index = pd.MultiIndex.from_product([def_nde.keys(), def_ndf.keys()],  names=[\"nde\", \"ndf\"])\n",
     "    temp_text_df = pd.DataFrame(index=index, columns=[\"text\", \"places\", \"persons\"])\n",
     "    temp_text_df[\"text\"] = \"\"\n",
-    "    temp_text_df[\"places\"] = [set() for i in range(len(temp_text_df))]\n",
-    "    temp_text_df[\"persons\"] = [set() for i in range(len(temp_text_df))]\n",
-    "    temp_text_df[\"works\"] = [set() for i in range(len(temp_text_df))]\n",
+    "    temp_text_df[\"places\"] = [{} for i in range(len(temp_text_df))]\n",
+    "    temp_text_df[\"persons\"] = [{} for i in range(len(temp_text_df))]\n",
+    "    temp_text_df[\"works\"] = [{} for i in range(len(temp_text_df))]\n",
     "    temp_text_df[\"filename\"] = filename\n",
     "    temp_text_df[\"title\"] = re.sub(\"\\s+\", \" \", title).strip()\n",
     "    temp_text_df[\"volume\"] = re.sub(\"\\s+\", \" \", volume).strip()\n",
@@ -292,7 +288,6 @@
     "    cur_ndfs = [None]\n",
     "    for c in text_element.iterdescendants():\n",
     "        tag = c.tag.replace(\"{http://www.tei-c.org/ns/1.0}\", \"\")\n",
-    "        #print(tag)\n",
     "        if tag == \"milestone\":\n",
     "            kind = c.attrib[\"unit\"]\n",
     "            if kind in def_nde:\n",
@@ -307,7 +302,6 @@
     "                    if len(cur_ndfs) > 1: cur_ndfs.pop()\n",
     "                except KeyError:\n",
     "                    cur_ndfs.append(kind)\n",
-    "            #print(cur_ndes, cur_ndf)\n",
     "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.tail\n",
     "            except (TypeError, KeyError):\n",
@@ -324,36 +318,68 @@
     "                pass\n",
     "        if tag == \"placeName\":\n",
     "            try:\n",
-    "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"].add(re.sub(\"\\s+\", \" \", c.text).strip())\n",
+    "                normalized_place = et.xpath(\"//tei:profileDesc/tei:textClass/tei:keywords/tei:list/tei:item/tei:placeName[@xml:id='{}']/tei:name\".format(c.attrib[\"key\"].replace(\"#\", \"\")), namespaces=namespaces)[0].text \n",
+    "            except (KeyError, IndexError):\n",
+    "                normalized_place = \"\"\n",
+    "            try:\n",
+    "                temp_place = re.sub(\"\\s+\", \" \", c.text).strip()\n",
+    "                if temp_place not in temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"]:\n",
+    "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"][temp_place] = {\"norm\": normalized_place, \"num\": 1}\n",
+    "                else:\n",
+    "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"][temp_place][\"num\"] += 1\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.text\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.tail\n",
     "            except TypeError:\n",
     "                pass\n",
     "        if tag == \"persName\":\n",
     "            try:\n",
-    "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"persons\"].add(re.sub(\"\\s+\", \" \", c.text).strip())\n",
+    "                temp_pers = re.sub(\"\\s+\", \" \", c.text).strip()\n",
+    "                if temp_pers not in temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"persons\"]:\n",
+    "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"persons\"][temp_pers] = {\"norm\": c.attrib[\"key\"], \"subtype\": c.attrib[\"subtype\"], \"num\": 1}\n",
+    "                else:\n",
+    "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"persons\"][temp_pers][\"num\"] += 1\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.text\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.tail\n",
     "            except TypeError:\n",
     "                pass\n",
     "        if tag == \"name\":\n",
     "            try:\n",
-    "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"works\"].add(re.sub(\"\\s+\", \" \", c.text).strip())\n",
+    "                if c.attrib[\"type\"] == \"work\":\n",
+    "                    temp_work = re.sub(\"\\s+\", \" \", c.text).strip()\n",
+    "                    if temp_work not in temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"works\"]:\n",
+    "                        temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"works\"][temp_work] = {\"norm\": c.attrib[\"key\"], \"num\": 1}\n",
+    "                    else:\n",
+    "                        temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"works\"][temp_work][\"num\"] += 1\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.text\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.tail\n",
     "            except TypeError:\n",
     "                pass\n",
     "        if tag == \"hi\":\n",
     "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.text\n",
-    "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.tail                 \n",
-    "            except (TypeError, IndexError):\n",
+    "            except TypeError:\n",
     "                pass\n",
-    "        if tag == \"lb\" or tag == \"pb\":\n",
+    "            try:\n",
+    "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.tail                 \n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "        if tag == \"lb\" or tag == \"pb\" or tag == \"l\":\n",
     "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" +  c.text\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "            try:\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" +  c.tail\n",
-    "            except:\n",
+    "            except TypeError:\n",
     "                pass\n",
     "    \n",
     "    # prepare data\n",
@@ -362,15 +388,6 @@
     "    texts_list.append(temp_text_df)\n",
     "    \n",
     "texts_df = pd.concat(texts_list, ignore_index=True, sort=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "texts_df.loc[7645, \"title\"]"
    ]
   },
   {
@@ -454,9 +471,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
