added extraction of geonameID

--- a/01_extract_data.ipynb
+++ b/01_extract_data.ipynb
@@ -322,9 +322,27 @@
     "            except (KeyError, IndexError):\n",
     "                normalized_place = \"\"\n",
     "            try:\n",
+    "                geo_id = et.xpath(\"//tei:profileDesc/tei:textClass/tei:keywords/tei:list/tei:item/tei:placeName[@xml:id='{}']/tei:name\".format(c.attrib[\"key\"].replace(\"#\", \"\")), namespaces=namespaces)[0].attrib[\"ref\"].split(\"/\")[-1] \n",
+    "            except (KeyError, IndexError):\n",
+    "                try:\n",
+    "                    if \"geoname\" in c.attrib[\"ref\"]:\n",
+    "                        try:\n",
+    "                            geo_id = re.findall(\"\\d+\", c.attrib[\"ref\"])[0]\n",
+    "                        except (TypeError, IndexError, KeyError):\n",
+    "                            geo_id = \"\"\n",
+    "                    else:\n",
+    "                        normalized_place = c.attrib[\"ref\"]\n",
+    "                        geo_id = \"\"\n",
+    "                except KeyError:\n",
+    "                    geo_id = \"\"\n",
+    "            try:\n",
+    "                geo_loc = et.xpath(\"//tei:profileDesc/tei:textClass/tei:keywords/tei:list/tei:item/tei:placeName[@xml:id='{}']/tei:location/tei:geo\".format(c.attrib[\"key\"].replace(\"#\", \"\")), namespaces=namespaces)[0].text \n",
+    "            except (KeyError, IndexError):\n",
+    "                geo_loc = \"\"\n",
+    "            try:\n",
     "                temp_place = re.sub(\"\\s+\", \" \", c.text).strip()\n",
     "                if temp_place not in temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"]:\n",
-    "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"][temp_place] = {\"norm\": normalized_place, \"num\": 1}\n",
+    "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"][temp_place] = {\"norm\": normalized_place, \"geo_id\": geo_id, \"geo_loc\": geo_loc, \"num\": 1}\n",
     "                else:\n",
     "                    temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"places\"][temp_place][\"num\"] += 1\n",
     "                temp_text_df.loc[(cur_ndes[-1], cur_ndfs[-1]), \"text\"] += \" \" + c.text\n",
