tool for normalization, incl. tutorial and examples

--- a/Normalisierungstool_v01_Tutorial.ipynb
+++ b/Normalisierungstool_v01_Tutorial.ipynb
@@ -450,7 +450,13 @@
     "                \n",
     "            NE_position=texts_df['text'][ind].find(unclear_NE)\n",
     "            text=texts_df['text'][ind][max(0,NE_position-character_margin):min(len(texts_df['text'][ind]),NE_position+character_margin+len(unclear_NE))]\n",
-    "            output_df=output_df.append({'old_index':ind, 'NE':unclear_NE,'normalized_NE':normalized_NE,'text':text},ignore_index=True)"
+    "            output_df=output_df.append({'old_index':ind, 'NE':unclear_NE,'normalized_NE':normalized_NE,'text':text},ignore_index=True)\n",
+    "        else:\n",
+    "            for NE in texts_df[type_of_NE][ind]:\n",
+    "                if unclear_NE == texts_df[type_of_NE][ind].get(NE).get('norm'):\n",
+    "                    NE_position=texts_df['text'][ind].find(NE)\n",
+    "                    text=texts_df['text'][ind][max(0,NE_position-character_margin):min(len(texts_df['text'][ind]),NE_position+character_margin+len(NE))]\n",
+    "                    output_df=output_df.append({'old_index':ind, 'NE':NE,'normalized_NE':unclear_NE,'text':text},ignore_index=True)"
    ]
   },
   {
